# wenbot

./: .env.example  .gitignore  Dockerfile  README.md  _test_full_flow.py  alerting_rules.yml  run_bot.py  run_weather.py  vercel.json
backend/data/: clob_client.py  wunderground.py
docs/: ec2-setup.md  order_management.md
frontend/: TASK.md
frontend/src/: App.tsx  index.css
frontend/src/wallet/: OverviewTab.tsx  PolyTab.tsx  StrategyTab.tsx  WalletPage.tsx  WalletTab.tsx  api.ts  hooks.ts  srp.ts  ui.tsx
rust-backend/: Cargo.toml
rust-backend/api-server/: Cargo.toml
rust-backend/api-server/src/: crypto.rs  fivesbot_state.rs  fivesbot_ws.rs  lib.rs  main.rs  nws.rs  routes.rs  scheduler.rs  srp_auth.rs  weather_markets.rs
rust-backend/backtest/: Cargo.toml
rust-backend/backtest/src/: data.rs  engine.rs  main.rs  report.rs
rust-backend/fivesbot-strategy/: Cargo.toml
rust-backend/fivesbot-strategy/src/: config.rs  error.rs  indicators.rs  lib.rs  predictor.rs  signals.rs  strategy.rs
rust-backend/polymarket-client/: Cargo.toml
rust-backend/polymarket-client/src/: auth.rs  client.rs  eip712.rs  error.rs  lib.rs  types.rs
rust-backend/scripts/: backfill_indicator_details.py  reconstruct_ledger.py  setup_polymarket.sh
rust-backend/virtual-wallet/: Cargo.toml
rust-backend/virtual-wallet/src/: db.rs  error.rs  fee.rs  lib.rs  manager.rs  models.rs  valuation.rs
rust-backend/wenbot-strategy/: Cargo.toml
rust-backend/wenbot-strategy/src/: config.rs  error.rs  forecast.rs  lib.rs  markets.rs  signals.rs  strategy.rs
scripts/: derive_and_verify.py  derive_and_verify.sh  drive.py  test_polymarket_auth.py  verify_key.py  verify_l2.py
