[package]
name = "api-server"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
virtual-wallet = { path = "../virtual-wallet" }
fivesbot-strategy = { path = "../fivesbot-strategy" }
wenbot-strategy = { path = "../wenbot-strategy" }
polymarket-client = { path = "../polymarket-client" }
dotenvy = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
regex = "1"
age = "0.10"
rand = "0.8"
base64 = "0.22"
num-bigint = "0.4"
num-traits = "0.2"
aes-gcm = "0.10"
rpassword = "7"
anyhow = "1"
