[package]
name = "backtest"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
rand = "0.8"
rand_distr = "0.4"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
fivesbot-strategy = { path = "../fivesbot-strategy" }
