[package]
name = "fivesbot-strategy"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
virtual-wallet = { path = "../virtual-wallet" }
polymarket-client = { path = "../polymarket-client" }
