[package]
name = "polymarket-client"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = "0.22"
chrono = { workspace = true }
dotenvy = { workspace = true }
k256 = "0.13"
sha3 = "0.10"
rand = "0.8"
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
